@@ -8,7 +8,7 @@ import java.io.FileReader;
 import java.io.Reader;
 import java.sql.Connection;
 import java.time.LocalDate;
-import java.util.LinkedList;
+import java.util.List;
 import java.util.Optional;
 
 import org.apache.ibatis.jdbc.ScriptRunner;
@@ -19,8 +19,6 @@ import org.springframework.test.context.junit.jupiter.SpringJUnitConfig;
 
 import com.excilys.cdb.ConfigTest;
 import com.excilys.cdb.exception.ExecuteQueryException;
-import com.excilys.cdb.exception.MapperException;
-import com.excilys.cdb.exception.OpenException;
 import com.excilys.cdb.model.Company;
 import com.excilys.cdb.model.Company.CompanyBuilder;
 import com.excilys.cdb.model.Computer;
@@ -29,10 +27,10 @@ import com.excilys.cdb.utils.SecureInputs;
 
 @SpringJUnitConfig(ConfigTest.class)
 class DaoComputerTest {
-	
+
 	private DatabaseConnection dbConnection;
 	private DaoComputer daoComputer;
-	
+
 	@Autowired
 	public DaoComputerTest(DatabaseConnection dbConnection, DaoComputer daoComputer) {
 		this.dbConnection = dbConnection;
@@ -49,7 +47,7 @@ class DaoComputerTest {
 		}
 	}
 
-	private Computer createWr7Computer() throws OpenException {
+	private Computer createWr7Computer() {
 		int id = 1;
 		String name = "Computer_WR7";
 		Computer computer = new ComputerBuilder()
@@ -60,7 +58,7 @@ class DaoComputerTest {
 		return computer;
 	}
 
-	private Computer createTestComputer() throws OpenException {
+	private Computer createTestComputer() {
 		int id = 2;
 		String name = "Computer_test";
 		LocalDate introduced = SecureInputs.toLocalDate("2021-05-11").orElse(null);
@@ -86,130 +84,118 @@ class DaoComputerTest {
 	}
 
 	private void createComputers() {
-		try {
-			for (int k = 0; k < 25; k++) {
-				Computer computer = new ComputerBuilder()
-						.withName("test" + k)
-						.build();
-				daoComputer.insertComputer(computer);
-			}
-		} catch (OpenException e) {
-			fail("Should not throw an exception");
+		for (int k = 0; k < 25; k++) {
+			Computer computer = new ComputerBuilder().withName("test" + k).build();
+			daoComputer.insertComputer(computer);
 		}
 	}
 
 	@Test
-	void testGetAllComputersShouldReturnListOfComputers() {
+	void testSelectAllComputersShouldReturnListOfComputers() {
 		try {
 			createWr7Computer();
 			createTestComputer();
-
-			LinkedList<Computer> allComputers = daoComputer.getAllComputers();
+			List<Computer> allComputers = daoComputer.selectAllComputers();
 			assertEquals(2, allComputers.size());
-		} catch (OpenException | ExecuteQueryException | MapperException e) {
+		} catch (ExecuteQueryException e) {
 			fail("Should not throw an exception");
 		}
 	}
 
 	@Test
-	void testGetAllComputersShouldReturnAnEmptyListOfComputers() {
+	void testSelectAllComputersShouldReturnAnEmptyListOfComputers() {
 		try {
-			LinkedList<Computer> allComputers = daoComputer.getAllComputers();
+			List<Computer> allComputers = daoComputer.selectAllComputers();
 			assertEquals(0, allComputers.size());
-		} catch (OpenException | ExecuteQueryException | MapperException e) {
+		} catch (ExecuteQueryException e) {
 			fail("Should not throw an exception");
 		}
 	}
 
 	@Test
-	void testGetComputerByIdShouldReturnComputer() {
+	void testSelectComputerByIdShouldReturnComputer() {
 		try {
 			createWr7Computer();
 			Computer test = createTestComputer();
-
-			Optional<Computer> computer = daoComputer.getComputerById(test.getId());
+			Optional<Computer> computer = daoComputer.selectComputerById(test.getId());
 			if (computer.isPresent()) {
 				Computer c = computer.get();
 				assertEquals(test, c);
 			} else {
 				fail("Should not be empty");
 			}
-		} catch (OpenException | ExecuteQueryException | MapperException e) {
+		} catch (ExecuteQueryException e) {
 			fail("Should not throw an exception");
 		}
 	}
 
 	@Test
-	void testGetComputerByIdShouldNotReturnComputer() {
+	void testSelectComputerByIdShouldNotReturnComputer() {
 		try {
 			createWr7Computer();
 			createTestComputer();
 			int falseId = 5;
-
-			Optional<Computer> computer = daoComputer.getComputerById(falseId);
+			Optional<Computer> computer = daoComputer.selectComputerById(falseId);
 			if (computer.isPresent()) {
 				fail("Should be empty");
 			}
-		} catch (OpenException | ExecuteQueryException | MapperException e) {
+		} catch (ExecuteQueryException e) {
 			fail("Should not throw an exception");
 		}
 	}
 
 	@Test
-	void testGetComputerByNameShouldReturnListOfComputer() {
+	void testSelectComputerByNameShouldReturnListOfComputer() {
 		try {
 			Computer wr7 = createWr7Computer();
 			createTestComputer();
 			String computerName = "Computer_WR7";
-
-			LinkedList<Computer> computers = daoComputer.getComputerByName(computerName);
+			List<Computer> computers = daoComputer.selectComputersByName(computerName);
 			assertEquals(1, computers.size());
-			assertEquals(wr7, computers.getFirst());
-		} catch (OpenException | MapperException | ExecuteQueryException e) {
+			assertEquals(wr7, computers.get(0));
+		} catch (ExecuteQueryException e) {
 			fail("Should not throw an exception");
 		}
 	}
 
 	@Test
-	void testGetComputerByNameShouldReturnAnEmptyListOfComputer() {
+	void testSelectComputerByNameShouldReturnAnEmptyListOfComputer() {
 		try {
 			createWr7Computer();
 			createTestComputer();
 			String computerName = "false_name";
-
-			LinkedList<Computer> computers = daoComputer.getComputerByName(computerName);
+			List<Computer> computers = daoComputer.selectComputersByName(computerName);
 			assertEquals(0, computers.size());
-		} catch (OpenException | MapperException | ExecuteQueryException e) {
+		} catch (ExecuteQueryException e) {
 			fail("Should not throw an exception");
 		}
 	}
 
 	@Test
-	void testGetPartOfComputersByNameShouldReturnListOfComputers() {
-		int n = 10;
-		int offset = 0;
+	void testSelectPartOfComputersByNameShouldReturnListOfComputers() {
 		try {
+			int limit = 10;
+			int offset = 0;
 			Computer wr7 = createWr7Computer();
 			createWr7Computer();
 			createTestComputer();
-			LinkedList<Computer> computers = daoComputer.getPartOfComputersByName(wr7.getName(), n,
-					offset);
+			List<Computer> computers = daoComputer.selectPartOfComputersByName(wr7.getName(), limit, offset);
 			assertEquals(2, computers.size());
-		} catch (OpenException | MapperException | ExecuteQueryException e) {
-			fail("Should not throw and exception");
+		} catch (ExecuteQueryException e) {
+			fail("Should not throw an exception");
 		}
 	}
 
 	@Test
-	void testGetPartOfComputersByNameShouldReturnAnEmptyListOfComputers() {
-		String name = "false_name";
-		int n = 10;
-		int offset = 0;
+	void testSelectPartOfComputersByNameShouldReturnAnEmptyListOfComputers() {
 		try {
-			LinkedList<Computer> computers = daoComputer.getPartOfComputersByName(name, n, offset);
+			String name = "false_name";
+			int limit = 10;
+			int offset = 0;
+			List<Computer> computers = daoComputer.selectPartOfComputersByName(name, limit, offset);
 			assertEquals(0, computers.size());
-		} catch (OpenException | MapperException | ExecuteQueryException e) {
-			fail("Should not throw and exception");
+		} catch (ExecuteQueryException e) {
+			fail("Should not throw an exception");
 		}
 
 	}
@@ -220,13 +206,11 @@ class DaoComputerTest {
 			createWr7Computer();
 			createTestComputer();
 			int id = 1;
-
 			int numDelete = daoComputer.deleteComputerById(id);
 			assertEquals(id, numDelete);
-
-			LinkedList<Computer> allComputers = daoComputer.getAllComputers();
+			List<Computer> allComputers = daoComputer.selectAllComputers();
 			assertEquals(1, allComputers.size());
-		} catch (OpenException | ExecuteQueryException | MapperException e) {
+		} catch (ExecuteQueryException e) {
 			fail("Should not throw an exception");
 		}
 	}
@@ -237,47 +221,41 @@ class DaoComputerTest {
 			createWr7Computer();
 			createTestComputer();
 			int falseId = 5;
-
 			int numDelete = daoComputer.deleteComputerById(falseId);
 			assertEquals(0, numDelete);
-
-			LinkedList<Computer> allComputers = daoComputer.getAllComputers();
+			List<Computer> allComputers = daoComputer.selectAllComputers();
 			assertEquals(2, allComputers.size());
-		} catch (OpenException | ExecuteQueryException | MapperException e) {
+		} catch (ExecuteQueryException e) {
 			fail("Should not throw an exception");
 		}
 	}
-	
+
 	@Test
 	void testDeleteComputersByCompanyIdShouldDeleteComputer() {
 		try {
 			createWr7Computer();
 			Computer test = createTestComputer();
 			int companyId = test.getCompany().getId();
-
 			int numDelete = daoComputer.deleteComputersByCompanyId(companyId);
 			assertEquals(companyId, numDelete);
-
-			LinkedList<Computer> allComputers = daoComputer.getAllComputers();
+			List<Computer> allComputers = daoComputer.selectAllComputers();
 			assertEquals(1, allComputers.size());
-		} catch (OpenException | ExecuteQueryException | MapperException e) {
+		} catch (ExecuteQueryException e) {
 			fail("Should not throw an exception");
 		}
 	}
-	
+
 	@Test
 	void testDeleteComputersByCompanyIdShouldNotDeleteComputer() {
 		try {
 			createWr7Computer();
 			createTestComputer();
 			int falseId = 999;
-
 			int numDelete = daoComputer.deleteComputersByCompanyId(falseId);
 			assertEquals(0, numDelete);
-
-			LinkedList<Computer> allComputers = daoComputer.getAllComputers();
+			List<Computer> allComputers = daoComputer.selectAllComputers();
 			assertEquals(2, allComputers.size());
-		} catch (OpenException | ExecuteQueryException | MapperException e) {
+		} catch (ExecuteQueryException e) {
 			fail("Should not throw an exception");
 		}
 	}
@@ -287,145 +265,145 @@ class DaoComputerTest {
 		try {
 			String name = "Computer_WR7";
 			int company_id = 999;
-
 			Company company = new CompanyBuilder().withId(company_id).build();
 			Computer computer = new ComputerBuilder().withName(name).withCompany(company).build();
-
 			int numInsert = daoComputer.insertComputer(computer);
 			assertEquals(0, numInsert);
-
-			LinkedList<Computer> allComputers = daoComputer.getAllComputers();
+			List<Computer> allComputers = daoComputer.selectAllComputers();
 			assertEquals(0, allComputers.size());
-		} catch (OpenException | ExecuteQueryException | MapperException e) {
+		} catch (ExecuteQueryException e) {
 			fail("Should not throw an exception");
 		}
 	}
 
 	@Test
-	void testUpdateComputerByIdShouldUpdateComputer() {
+	void testUpdateComputerShouldUpdateComputer() {
 		try {
 			Computer wr7 = createWr7Computer();
 			Computer test = createTestComputer();
-
-			int numUpdate = daoComputer.updateComputerById(wr7.getId(), test);
+			Computer computerUpdate = new ComputerBuilder()
+					.withId(wr7.getId())
+					.withName(test.getName())
+					.withIntroduced(test.getIntroduced())
+					.withDiscontinued(test.getDiscontinued())
+					.withCompany(test.getCompany())
+					.build();
+			int numUpdate = daoComputer.updateComputer(computerUpdate);
 			assertEquals(1, numUpdate);
-
-			Optional<Computer> computer = daoComputer.getComputerById(wr7.getId());
+			Optional<Computer> computer = daoComputer.selectComputerById(wr7.getId());
 			if (computer.isPresent()) {
-				Computer computerUpdate = new ComputerBuilder().withId(wr7.getId()).withName(test.getName())
-						.withIntroduced(test.getIntroduced()).withDiscontinued(test.getDiscontinued())
-						.withCompany(test.getCompany()).build();
-
 				assertEquals(computerUpdate, computer.get());
 			} else {
 				fail("Should not be empty");
 			}
-		} catch (OpenException | ExecuteQueryException | MapperException e) {
+		} catch (ExecuteQueryException e) {
 			fail("Should not throw an exception");
 		}
 	}
 
 	@Test
-	void testUpdateComputerByIdShouldNotUpdateComputer() {
-		try {
-			createWr7Computer();
-			Computer test = createTestComputer();
-			int falseId = 5;
-
-			int numUpdate = daoComputer.updateComputerById(falseId, test);
-			assertEquals(0, numUpdate);
-
-			int falseCompanyId = 999;
-			Company falseCompany = new CompanyBuilder().withId(falseCompanyId).build();
-			Computer computer = new ComputerBuilder().withId(test.getId()).withName(test.getName())
-					.withIntroduced(test.getIntroduced()).withDiscontinued(test.getDiscontinued())
-					.withCompany(falseCompany).build();
-
-			int numUpdate2 = daoComputer.updateComputerById(1, computer);
-			assertEquals(0, numUpdate2);
-		} catch (OpenException e) {
-			fail("Should not throw an exception");
-		}
+	void testupdateComputerShouldNotUpdateComputer() {
+		createWr7Computer();
+		Computer test = createTestComputer();
+		int falseId = 5;
+		String name = "test";
+		
+		Computer falseComputer = new ComputerBuilder()
+				.withId(falseId)
+				.withName(name)
+				.build();
+		
+		int numUpdate = daoComputer.updateComputer(falseComputer);
+		assertEquals(0, numUpdate);
+		
+		int falseCompanyId = 999;
+		Company falseCompany = new CompanyBuilder()
+				.withId(falseCompanyId)
+				.build();
+		Computer computer = new ComputerBuilder()
+				.withId(test.getId())
+				.withName(test.getName())
+				.withIntroduced(test.getIntroduced())
+				.withDiscontinued(test.getDiscontinued())
+				.withCompany(falseCompany)
+				.build();
+		int numUpdate2 = daoComputer.updateComputer(computer);
+		assertEquals(0, numUpdate2);
 	}
 
 	@Test
-	void testGetPartOfComputersShouldReturnListOfTenComputers() {
+	void testSelectPartOfComputersShouldReturnListOfTenComputers() {
 		try {
 			createComputers();
-
-			LinkedList<Computer> allComputers = daoComputer.getPartOfComputers(10, 0);
+			List<Computer> allComputers = daoComputer.selectPartOfComputers(10, 0);
 			assertEquals(10, allComputers.size());
-		} catch (OpenException | ExecuteQueryException | MapperException e) {
+		} catch (ExecuteQueryException e) {
 			fail("Should not throw an exception");
 		}
 	}
 
 	@Test
-	void testGetPartOfComputersShouldReturnListOfTenComputersWithOffset10() {
+	void testSelectPartOfComputersShouldReturnListOfTenComputersWithOffset10() {
 		try {
 			createComputers();
-
-			LinkedList<Computer> allComputers = daoComputer.getPartOfComputers(10, 10);
+			List<Computer> allComputers = daoComputer.selectPartOfComputers(10, 10);
 			assertEquals(10, allComputers.size());
-		} catch (OpenException | ExecuteQueryException | MapperException e) {
+		} catch (ExecuteQueryException e) {
 			fail("Should not throw an exception");
 		}
 	}
 
 	@Test
-	void testGetPartOfComputersShouldReturnListOfFiveComputersWithOffset10() {
+	void testSelectPartOfComputersShouldReturnListOfFiveComputersWithOffset10() {
 		try {
 			createComputers();
-
-			LinkedList<Computer> allComputers = daoComputer.getPartOfComputers(10, 20);
+			List<Computer> allComputers = daoComputer.selectPartOfComputers(10, 20);
 			assertEquals(5, allComputers.size());
-		} catch (OpenException | ExecuteQueryException | MapperException e) {
+		} catch (ExecuteQueryException e) {
 			fail("Should not throw an exception");
 		}
 	}
 
 	@Test
-	void testGetPartOfComputersShouldReturnListOfTwoComputers() {
+	void testSelectPartOfComputersShouldReturnListOfTwoComputers() {
 		try {
 			createWr7Computer();
 			createTestComputer();
-
-			LinkedList<Computer> allComputers = daoComputer.getPartOfComputers(10, 0);
+			List<Computer> allComputers = daoComputer.selectPartOfComputers(10, 0);
 			assertEquals(2, allComputers.size());
-		} catch (OpenException | ExecuteQueryException | MapperException e) {
+		} catch (ExecuteQueryException e) {
 			fail("Should not throw an exception");
 		}
 	}
 
 	@Test
-	void testGetPartOfComputersShouldReturnAnEmptyListOfComputers() {
+	void testSelectPartOfComputersShouldReturnAnEmptyListOfComputers() {
 		try {
-			LinkedList<Computer> allComputers = daoComputer.getPartOfComputers(10, 0);
+			List<Computer> allComputers = daoComputer.selectPartOfComputers(10, 0);
 			assertEquals(0, allComputers.size());
-		} catch (OpenException | ExecuteQueryException | MapperException e) {
+		} catch (ExecuteQueryException e) {
 			fail("Should not throw an exception");
 		}
 	}
 
 	@Test
-	void testGetNumberOfComputerShouldReturn2() {
+	void testSelectNumberOfComputerShouldReturn2() {
 		try {
 			createWr7Computer();
 			createTestComputer();
-
-			int numComputer = daoComputer.getNumberOfComputer();
+			int numComputer = daoComputer.selectNumberOfComputer();
 			assertEquals(2, numComputer);
-		} catch (OpenException | ExecuteQueryException | MapperException e) {
+		} catch (ExecuteQueryException e) {
 			fail("Should not throw an exception");
 		}
 	}
 
 	@Test
-	void testGetNumberOfComputerShouldReturn0() {
+	void testSelectNumberOfComputerShouldReturn0() {
 		try {
-			int numComputer = daoComputer.getNumberOfComputer();
+			int numComputer = daoComputer.selectNumberOfComputer();
 			assertEquals(0, numComputer);
-		} catch (OpenException | ExecuteQueryException | MapperException e) {
+		} catch (ExecuteQueryException e) {
 			fail("Should not throw an exception");
 		}
 	}
